# Auto-clicker

./: CMakeLists.txt  README.md
src/linux/: main.cpp
src/mac/: main.cpp
src/windows/: main.cpp
